--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 SERVER_PORT=8000
-CURRENCIES_API=https://restcountries.com/v3.1/name
+IPINFO_API="http://ip-api.com/json"
+CURRENCIES_API="https://restcountries.com/v3.1/name"
 EXCHANGE_RATES_API="https://open.er-api.com/v6/latest"
